Добавлены @NonNull и List.of в SecurityConfig и KeycloakJwtAuthenticationConverter